--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <div class="main">
+    <h1>Welcome to EduHub</h1>
+  </div>
   <app-root></app-root>
 </body>
 </html>
